packages/apex-parser-ast/test/fixtures/validation/syntax-error/MissingSemicolon.cls
public class MissingSemicolon {
    public void test() {
        String x = "a"
        Integer y = 1;
    }
}
